gcc/testsuite/gdc.test/compilable/imports/test9276hash.d
module imports.test9276hash;
