gcc/testsuite/gdc.test/fail_compilation/imports/test5412b.d
module imports.test5412b;
